2010-02-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* index.txt:
	(13.5 Converting HTML body to plain text): remove
	lynx urls.
	(2.5 Procmail code to filter UBE): Update junkfilter URL.
	(13.2 Mime content type application/ms-tnef): Update
	Microsoft URL.
	(23.1 To find out more about mail): Update URL.

2008-09-21  Jari Aalto  <jari.aalto@cante.net>

	* pm-tips.txt (1.5 Document layout and maintenance): Correct
	www.gnu.org address.

2008-03-09  Jari Aalto  <jari.aalto@cante.net>

	* pm-tips.txt:
	(1.5 Document layout and maintenance): Fix URL.
	(2.2 Procmail resources): Add Gmane URL.
	(2.3 Procmail mode for Emacs): Fix URL.
	(2.4.1 Where to get various modules): Fix URL.
	(2.4.2 Terminology): Clarify recipe.
	(2.4.6 Spam modules): Correct URL.
	(Csh's tilde is not supported): Rewrite paragraph.
	(4.5 Check and set PATH): Break PATH into separate lines.
	(4.9 Beware putting comment in wrong places): Adjust example.
	(5.2 Flags HB at top of recipe): Adjust URL.
	(19.8 The .forward file must be real file): Remove non existing
	URL http://www.math.fu-berlin.de/~guckes/mail/forwarding.html

2007-10-27  Jari Aalto  <jari.aalto@cante.net>

	* pm-tips.txt: (1.8 About "useless use of cat award"):
	Converted ksh script to plain Bourne shell sh-script and
	presented the timing results.

2007-10-04  Jari Aalto  <jari.aalto@cante.net>

	* pm-tips.txt (2.2 Procmail resources):
	(2.2 Procmail resources): Reformatted.
	(2.5 Procmail code to filter UBE): Reformatted.
	(8.10 Make your own .procmailrc available to others): Topic and
	recipe code 'autoresponder' removed. Web pages are appropriate
	place to show procmail code.

2007-10-02  Jari Aalto  <jari.aalto@cante.net>

	* pm-tips.txt:
	- Corrected all 'broken apart' links and removed URL: prefix.
	- New CSS layout. Removed framed page with single page.
	(1.1 General): Made more compact.
	(1.3 Abbreviations and thanks): Removed mailing lists links.
	(2.2 Procmail resources): Updated Nancy McGough's Prcmail Quick